# yaldabaranth

./: .gitignore  Cargo.toml  LICENSE  README.md  Yaldabaranth.csproj  Yaldabaranth.sln  export_presets.cfg  main.py  project.godot  pyproject.toml  rustext.gdextension  rustext.gdextension.uid  world.tscn  xmake.lua
Assets/: urizen_tileset.png.import
Scripts/: Map.cs  Map.cs.uid  Menu.cs  Menu.cs.uid  Persistence.cs  Persistence.cs.uid  Tileset.cs  Tileset.cs.uid  World.cs  World.cs.uid
Scripts/ECS/Component/: Component.cs  Component.cs.uid
Scripts/ECS/Components/: Components.cs  Components.cs.uid
Scripts/ECS/Entities/: Entities.cs  Entities.cs.uid
Scripts/ECS/Entity/: Entity.cs  Entity.cs.uid
Scripts/ECS/Tag/: Tag.cs  (+1 more)
Scripts/Map/: Map.cs.uid
Yaldabaranth.Android/: AndroidManifest.xml  MainActivity.cs  Yaldabaranth.Android.csproj
Yaldabaranth.Core/: Yaldabaranth.Core.csproj  YaldabaranthGame.cs
Yaldabaranth.Core/Content/: android-icons-generator.sh  ios-icons-generator.sh  mac-icons-generator.sh
Yaldabaranth.Core/Scripts/: Input.cs  Map.cs  Menu.cs  Tileset.cs
Yaldabaranth.DesktopGL/: Program.cs  Yaldabaranth.DesktopGL.csproj  app.manifest
Yaldabaranth.iOS/: Info.plist  Program.cs  Yaldabaranth.iOS.csproj
assets/: urizen_tileset.png.import
rustext/: Cargo.toml
rustext/src/: lib.rs
rustext/src/ecs/: components.rs  entities.rs  systems.rs
rustext/src/tileset/: mod.rs
src/: main.cpp  main.py  main.rs  options.py  options.rs  sound.rs  tileset.rs
src/ecs/: components.py  components.rs  entities.py  entities.rs  systems.py  systems.rs
(+29 files in other folders)
