[package]
name = "rustext"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { version = "0.4.5", features = ["serde"] }
hecs = { version = "0.10.5", features = ["row-serialize", "serde"] }
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
sled = "0.34.7"

